# restic

./: .bumpversion.toml  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.toml
.github/workflows/: pull-request.yaml  push.yaml
src/restic/: __init__.py  cli.py  click.py  constants.py  lib.py  repo.py  settings.py  types.py  utilities.py
src/tests/: test_cli.py  test_click.py  test_main.py  test_repo.py
