[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]", "pyright", "rich"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click >=8.3.1, <8.4",
    "dycw-utilities >=0.171.1, <0.172",
    "typed-settings >=25.3.0, <25.4",
  ]
  name = "dycw-restic"
  readme = "README.md"
  requires-python = ">= 3.14"
  version = "0.1.1"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "restic"
      module-root = "src"
