[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]", "pyright", "rich"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click >=8.3.1, <9",
    "dycw-utilities >=0.172.1, <1",
    "typed-settings >=25.3.0, <26",
  ]
  description = "Library to operate `restic`"
  name = "dycw-restic"
  readme = "README.md"
  requires-python = ">= 3.14"
  version = "0.2.4"

  [project.scripts]
    py-restic = "restic.cli:_main"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "restic"
      module-root = "src"
